updated robustness notebook
- updated examples in robustness notebook
- fixed sign in bruteforce sensitivity output

--- a/verification/robustness.ipynb
+++ b/verification/robustness.ipynb
@@ -11,9 +11,7 @@
     "import pickle as pkl\n",
     "from IPython.display import display\n",
     "from maraboupy import Marabou, MarabouCore\n",
-    "from utils import TOTUtils\n",
-    "# from robustness import test_input_robustness, test_network_robustness\n",
-    "from robustness import test_network_sensitivity"
+    "from utils import TOTUtils"
    ]
   },
   {
@@ -36,22 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x = 0\n",
-    "# d = 1.1\n",
-    "# input_samples = [sample_input]\n",
-    "# output_samples = [sample_output]\n",
-    "# test_input_robustness(nnet_path, x, d, input_samples, output_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Max UNSAT distances per feature for sample_input\n",
     "# distances = [0.0] * len(sample_input)\n",
-    "\n",
-    "# # Max UNSAT distances per feature for sample_input\n",
     "# distances[0] = 1.16\n",
     "# distances[1] = 0.37\n",
     "# distances[2] = 0.18\n",
@@ -76,54 +60,34 @@
     "# distances[21] = 1.15\n",
     "# distances[22] = 0.42\n",
     "# distances[23] = 2.82\n",
-    "# distances[24] = 0.81\n",
-    "\n",
-    "# results = test_network_robustness(nnet_path, distances, [sample_input], [sample_output])\n",
-    "# # print(results)\n",
-    "# for x,x_results in results.items():\n",
-    "#     for i,sample_result in x_results.items():\n",
-    "#         for category_results in sample_result:\n",
-    "#             for cr in category_results:\n",
-    "#                 assert len(cr) == 0, 'SAT. Found counterexample'\n",
-    "# print('UNSAT.')"
+    "# distances[24] = 0.81"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[['input 0 = 1.4322614500364241',\n  'input 1 = -0.22479658685112885',\n  'input 2 = -0.14872559153186365',\n  'input 3 = -0.1183740939370412',\n  'input 4 = -0.11582643087693376',\n  'input 5 = 0.4638055359970424',\n  'input 6 = 0.5343624908151317',\n  'input 7 = -1.8587238209603285',\n  'input 8 = -1.925346908225373',\n  'input 9 = 0.7745258391529399',\n  'input 10 = 1.691414092773877',\n  'input 11 = -1.1513317010900714',\n  'input 12 = 0.15687995017838718',\n  'input 13 = -0.4932713694542802',\n  'input 14 = 0.3758603164252629',\n  'input 15 = -0.6443093237643779',\n  'input 16 = 0.5198151301903109',\n  'input 17 = -0.1392841543884293',\n  'input 18 = -0.17885723928180608',\n  'input 19 = -0.7026510235427964',\n  'input 20 = -0.04793722518544871',\n  'input 21 = -0.4594806526602232',\n  'input 22 = 0.18987588687321624',\n  'input 23 = 0.4657886911920623',\n  'input 24 = -0.1626985247701109',\n  'output 0 = 3.5931542051395406',\n  'output 1 = 3.615030909085161',\n  'output 2 = -4.356136826230461']]"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
-    "# from robustness import find_feature_sensitivity\n",
-    "\n",
-    "# find_feature_sensitivity(nnet_path, 1, samples, d_min=0.01, d_max=26.00, d_step=0.01)"
+    "from robustness import evaluate_sample\n",
+    "x=0\n",
+    "d=1.17\n",
+    "s=sample_input[0:x] + [sample_input[x]+d] + sample_input[x+1:]\n",
+    "evaluate_sample(nnet_path, s, sample_output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test_network_sensitivity(nnet_path, len(sample_input), [(sample_input, sample_output)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from robustness import evaluate_sample\n",
-    "# x=0\n",
-    "# d=4.92\n",
-    "# s=sample_input[0:x] + [sample_input[x]-d] + sample_input[x+1:]\n",
-    "# evaluate_sample(nnet_path, s, sample_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "outputPrepend",
@@ -166,15 +130,22 @@
      "outputPrepend"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{'x0': (-4.93, 1.17),\n 'x1': (-0.82, 0.38),\n 'x2': (-0.32, 0.19),\n 'x3': (-2.5, 1.49),\n 'x4': (-0.32, 1.17),\n 'x5': (-0.93, 0),\n 'x6': (-1.08, 0.28),\n 'x7': (-3.94, 1.9),\n 'x8': (-1.62, 2.62),\n 'x9': (-6.86, 9.24),\n 'x10': (-40.16, 25.54),\n 'x11': (-11.95, 0.41),\n 'x12': (-1.58, 1.1),\n 'x13': (-0.23, 4.1),\n 'x14': (-1.95, 1.22),\n 'x15': (-3.86, 1.33),\n 'x16': (-0.67, 1.84),\n 'x17': (-0.4, 0.66),\n 'x18': (-1.05, 1.28),\n 'x19': (-0.18, 0.5),\n 'x20': (-0.16, 6.21),\n 'x21': (-2.02, 1.16),\n 'x22': (-0.43, 0.9),\n 'x23': (-2.83, 8.19),\n 'x24': (-0.82, 8.24)}"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
    "source": [
-    "from robustness import find_feature_sensitivity\n",
-    "# from robustness import test_network_sensitivity\n",
+    "# from robustness import find_feature_sensitivity_bruteforce\n",
+    "# find_feature_sensitivity_bruteforce(nnet_path, 0, samples)\n",
     "\n",
-    "# increase recursion limit\n",
-    "sys.setrecursionlimit(10**6)\n",
-    "\n",
-    "find_feature_sensitivity(nnet_path, 1, samples)"
+    "from robustness import test_network_sensitivity\n",
+    "test_network_sensitivity(nnet_path, len(samples[0][0]), samples)"
    ]
   },
   {
