robustness prune distances list
* pruning list of distances between samples to reduce search space
  * added to bruteforce sensitivity
  * added to recursive backtrack sensitivity
* updated robustness notebook's output

--- a/verification/robustness.ipynb
+++ b/verification/robustness.ipynb
@@ -134,26 +134,38 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'x0': (-4.93, 1.17),\n 'x1': (-0.82, 0.38),\n 'x2': (-0.32, 0.19),\n 'x3': (-2.5, 1.49),\n 'x4': (-0.32, 1.17),\n 'x5': (-0.93, 0),\n 'x6': (-1.08, 0.28),\n 'x7': (-3.94, 1.9),\n 'x8': (-1.62, 2.62),\n 'x9': (-6.86, 9.24),\n 'x10': (-40.16, 25.54),\n 'x11': (-11.95, 0.41),\n 'x12': (-1.58, 1.1),\n 'x13': (-0.23, 4.1),\n 'x14': (-1.95, 1.22),\n 'x15': (-3.86, 1.33),\n 'x16': (-0.67, 1.84),\n 'x17': (-0.4, 0.66),\n 'x18': (-1.05, 1.28),\n 'x19': (-0.18, 0.5),\n 'x20': (-0.16, 6.21),\n 'x21': (-2.02, 1.16),\n 'x22': (-0.43, 0.9),\n 'x23': (-2.83, 8.19),\n 'x24': (-0.82, 8.24)}"
+      "text/plain": "(-4.93, 1.17)"
      },
      "metadata": {},
      "execution_count": 5
     }
    ],
    "source": [
-    "# from robustness import find_feature_sensitivity_bruteforce\n",
-    "# find_feature_sensitivity_bruteforce(nnet_path, 0, samples)\n",
+    "from robustness import find_feature_sensitivity_bruteforce\n",
+    "find_feature_sensitivity_bruteforce(nnet_path, 0, samples)\n",
     "\n",
-    "from robustness import test_network_sensitivity\n",
-    "test_network_sensitivity(nnet_path, len(samples[0][0]), samples)"
+    "# from robustness import test_network_sensitivity\n",
+    "# test_network_sensitivity(nnet_path, len(samples[0][0]), samples)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(-4.93, 1.17)"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "from robustness import find_feature_sensitivity_recursive_backtrack\n",
+    "find_feature_sensitivity_recursive_backtrack(nnet_path, 0, samples)"
+   ]
   }
  ],
  "metadata": {
