sensitivity results to csv & cleanup
* add support to save sensitivity results to csv
* added some comments and renamed a few variables

--- a/verification/sensitivity.ipynb
+++ b/verification/sensitivity.ipynb
@@ -22,7 +22,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "1355 correct samples\n"
+     "text": "1329 correct samples\n"
     }
    ],
    "source": [
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sensitivity import find_sensitivity_boundaries\n",
+    "from sensitivity import find_sensitivity_boundaries, save_sensitivity_results_to_csv\n",
     "\n",
     "h5_path = '../artifacts/models/model_v3.2.0/model.h5'\n",
-    "results = find_sensitivity_boundaries(h5_path, samples, d_min=0.00001, d_max=100, multithread=True)\n",
+    "results = find_sensitivity_boundaries(h5_path, samples, d_min=0.00001, d_max=100, multithread=True, save_results=True)\n",
     "\n",
     "for x,result in results.items():\n",
     "    dists,_ = result\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
