fixed a few typos

--- a/verification/sensitivity.ipynb
+++ b/verification/sensitivity.ipynb
@@ -21,41 +21,10 @@
    "outputs": [],
    "source": [
     "nnet_path = '../artifacts/models/model_v3.2.0/model.h5'\n",
-    "test_data_csv = '../data/v3.2.0/test.csv'\n",
-    "all_samples = TOTUtils.load_samples(test_data_csv, frac=0.01)\n",
+    "data_csv = '../data/v3.2.0/test.csv'\n",
+    "all_samples = TOTUtils.load_samples(data_csv, frac=0.01)\n",
     "samples = TOTUtils.filter_samples(all_samples, nnet_path)\n",
     "print(f'{len(samples)} correct samples')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Make sure that all of the sample inputs return correct category.\n",
-    "# from tot_net import TOTNet\n",
-    "\n",
-    "# x=0\n",
-    "# dists=(0,0)\n",
-    "# res = []\n",
-    "# for i,sample in enumerate(samples):\n",
-    "#     inputs, outputs = sample\n",
-    "#     exp_cat = outputs.index(max(outputs))\n",
-    "#     other_cats = [i for i in range(5) if i != exp_cat]\n",
-    "#     net = TOTNet(nnet_path)\n",
-    "#     net.set_lower_bounds(inputs)\n",
-    "#     net.set_upper_bounds(inputs)\n",
-    "#     net.set_input_lower_bound(x, inputs[x]+dists[0])\n",
-    "#     net.set_input_upper_bound(x, inputs[x]+dists[1])\n",
-    "#     res.append([])\n",
-    "#     for oc in other_cats:\n",
-    "#         net.set_expected_category(oc)\n",
-    "#         r,_ = net.solve()\n",
-    "#         res[-1].append(r)\n",
-    "\n",
-    "# wrong_preds = [ir for r in res for cr in r for ir in cr if len(ir) > 0]\n",
-    "# assert(len(wrong_preds) == 0)"
    ]
   },
   {
@@ -80,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sensitivity import find_sensitivity_boundaries, save_sensitivity_results_to_csv\n",
+    "from sensitivity import find_sensitivity_boundaries\n",
     "\n",
     "h5_path = '../artifacts/models/model_v3.2.0/model.h5'\n",
     "results = find_sensitivity_boundaries(h5_path, samples, d_min=0.00001, d_max=100, multithread=True, save_results=True)\n",
