cli support, save samples, cleanup
- added cli support for sensitivity and robustness scripts
- added support for saving samples
- general cleanup & formatting

--- a/verification/robustness.ipynb
+++ b/verification/robustness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "140 correct samples\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nnet_path = '../artifacts/models/model_v3.2.0/model.h5'\n",
     "data_csv = '../data/v3.2.0/test.csv'\n",
@@ -35,20 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "INFO:robustness:wrote summary to ../artifacts/robustness/local_summary.csv\nINFO:robustness:wrote detils to ../artifacts/robustness/local_details.csv\nSUMMARY: (-0.0012700000000000658, 0.0020300000000000656)\nsummary: (-0.0012700000000000658, 0.0020300000000000656)\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from robustness import find_local_robustness_boundaries\n",
     "\n",
     "h5_path = '../artifacts/models/model_v3.2.0/model.h5'\n",
-    "results = find_local_robustness_boundaries(h5_path, samples, d_min=0.00001, d_max=100, multithread=True, save_results=True)\n",
+    "results = find_local_robustness_boundaries(h5_path, samples, d_min=0.00001, d_max=100, multithread=True, save_results=True, save_samples=True)\n",
     "summary, _ = results\n",
     "print(f'summary: {summary}')"
    ]
